# xai-switchbot

./: pyproject.toml  requirements.txt  switchbot_components.py
