[project]
name = "xai-switchbot"
version = "0.5.0"
description = "A Xircuits component library for Switchbot devices!"
authors = [{ name = "XpressAI", email = "eduardo@xpress.ai" }]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/XpressAI/xai-switchbot"
keywords = ["xircuits", "switchbot"]

# Xircuits-specific configurations
[tool.xircuits]
requirements_path = "requirements.txt"
